# python_boiler_plate

./: .coveragerc  .gitignore  .releaserc.json  Dockerfile  README.md  commitlint.config.js  package-lock.json  package.json  project.env  pyproject.toml  pytest.ini
.github/workflows/: codeql-analysis.yml  release.yml
script/manual/: docker_build.sh  docker_run.sh
script/workflow/: release.sh
src/: Dockerfile  main.py  requirements-dev.txt  requirements-min.txt  requirements.txt
src/application/: __init__.py  container.py  version.py
src/application/api/: __init__.py
src/application/api/info/: __init__.py  response.py
src/application/config/: __init__.py
test/: __init__.py
test/api/: test_info.py
test/application/: test_application_config.py  test_lifecycle.py  test_version.py
